--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,7 +53,7 @@ set(dbcsr_test_csr_conversions_SRCS dbcsr_test_csr_conversions.F)
 # instead of building a full-blown lib, it would be better to simply build an OBJECT lib,
 # but we would need cmake 3.12 to be able to specify target_link_libraries on those to get
 # the proper compile flags
-add_library(dbcsr_unittest_common ${dbcsr_unittest_common_SRCS})
+add_library(dbcsr_unittest_common STATIC ${dbcsr_unittest_common_SRCS})
 target_link_libraries(dbcsr_unittest_common dbcsr)
 
 foreach (dbcsr_test ${DBCSR_TESTS})
@@ -67,3 +67,25 @@ foreach (dbcsr_test ${DBCSR_TESTS})
   endif ()
   set_tests_properties(${dbcsr_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
 endforeach ()
+
+if (USE_CUDA)
+  set(LIBCUSMM_TESTS
+    libcusmm_unittest_multiply
+    libcusmm_unittest_transpose
+    libcusmm_timer_multiply
+    )
+
+  set(CMAKE_CUDA_FLAGS "-arch=sm_${CUDA_ARCH_NUMBER} --cudart static")
+
+  foreach (libcusmm_test ${LIBCUSMM_TESTS})
+    add_executable(${libcusmm_test} ${libcusmm_test}.cu)
+    target_link_libraries(${libcusmm_test} dbcsr)
+    # register unittest executable with CMake
+    if (USE_MPI)
+      add_test(NAME ${libcusmm_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ${libcusmm_test} ${MPIEXEC_POSTFLAGS})
+    else ()
+      add_test(NAME ${libcusmm_test} COMMAND ${libcusmm_test})
+    endif ()
+    set_tests_properties(${libcusmm_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
+  endforeach ()
+endif ()
