Make __MKL preprocessor symbol available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,11 @@ endif ()
 # PACKAGE DISCOVERY:
 
 find_package(BLAS REQUIRED)
+
+if (BLAS_VENDOR_FOUND MATCHES "Intel" OR BLAS_VENDOR MATCHES "Intel" OR BLAS_LIBRARIES MATCHES "mkl_")
+  add_definitions(-D__MKL)
+endif ()
+
 find_package(LAPACK REQUIRED)
 find_package(PkgConfig)
 
