--- a/.travis.yml
+++ b/.travis.yml
@@ -18,22 +18,24 @@ env:
   global:
   # LIBXSMM: update to v1.10 or later
   - LIBXSMM_VERSION=531c000d1218f5925aaf3ea34dca8eb3033d2dff
-  - PKG_CONFIG_PATH=${TRAVIS_BUILD_DIR}/libxsmm-${LIBXSMM_VERSION}/lib
 
 install:
-  - wget https://github.com/hfp/libxsmm/archive/${LIBXSMM_VERSION}.tar.gz -O /tmp/libxsmm.tar.gz
-  - tar xf /tmp/libxsmm.tar.gz && cd libxsmm-${LIBXSMM_VERSION} && make -j && cd ..
-  - pkg-config libxsmm --exists
   # Update cmake to the minimal required version (shamelessly copied from the boost travis config):
   - DEPS_DIR="${HOME}/deps"
   - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
   - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      CMAKE_URL="https://cmake.org/files/v3.10/cmake-3.10.0-Linux-x86_64.tar.gz"
+    if [[ "${TRAVIS_OS_NAME}" == "linux" ]] ; then
+      CMAKE_URL="https://cmake.org/files/v3.10/cmake-3.10.3-Linux-x86_64.tar.gz"
       mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
       export PATH=${DEPS_DIR}/cmake/bin:${PATH}
     fi
   - cmake --version
+  - |
+    LIBXSMM_URL="https://github.com/hfp/libxsmm/archive/${LIBXSMM_VERSION}.tar.gz"
+    mkdir libxsmm && travis_retry wget --no-check-certificate --quiet -O - ${LIBXSMM_URL} | tar --strip-components=1 -xz -C libxsmm
+    make -C libxsmm -j
+    export PKG_CONFIG_PATH=${DEPS_DIR}/libxsmm/lib
+  - pkg-config libxsmm --exists
 
 before_script:
   # make sure we are back into the top directory again
@@ -61,6 +63,15 @@ jobs:
     - make CTEST_OUTPUT_ON_FAILURE=1 test
   - # run this in parallel with the other builds
     name: "Build and test OpenMP version with cmake"
+    script:
+    - mkdir -p build
+    - cd build
+    # all examples need MPI atm
+    - cmake -DCMAKE_BUILD_TYPE=Coverage -DUSE_MPI=OFF -DWITH_EXAMPLES=OFF ..
+    - make -j
+    - make CTEST_OUTPUT_ON_FAILURE=1 test
+  - # run this in parallel with the other builds
+    name: "Build and test OpenMP version with cmake and libxsmm"
     script:
     - mkdir -p build
     - cd build
