cmake: install proper DBCSRConfig.cmake file
With this commit, the following is sufficient to build a DBCSR-based
project if CMake can find the `DBCSRConfig.cmake` (e.g. if DBCSR is
properly installed or by setting `CMAKE_PREFIX_PATH`):

```cmake
cmake_minimum_required(VERSION 3.10)

enable_language(Fortran C CXX)

find_package(DBCSR 1.0.0 CONFIG REQUIRED)

set(CMAKE_Fortran_FLAGS "-ffree-form -ffree-line-length-none -std=f2003")

add_executable(dbcsr_example_fortran dbcsr_example.f90)
target_link_libraries(dbcsr_example_fortran DBCSR::dbcsr)

add_executable(dbcsr_example_c dbcsr_example.c)
target_link_libraries(dbcsr_example_c DBCSR::dbcsr_c MPI::MPI_C)

add_executable(dbcsr_example_cpp dbcsr_example.cpp)
target_link_libraries(dbcsr_example_cpp DBCSR::dbcsr_c MPI::MPI_CXX)
```

fixes: #61

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 include(fypp-sources)
-include(GNUInstallDirs)  # required to the a proper LIBDIR variable
+include(GNUInstallDirs)  # required to get a proper LIBDIR variable
+include(CMakePackageConfigHelpers)
 
 add_fypp_sources(DBCSR_SRCS
   dbcsr_api.F
@@ -199,23 +200,44 @@ if (WITH_C_API)
     )
 endif ()
 
+set(config_install_dir "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
+set(config_namespace "DBCSR::")
+
 # Install targets:
-install(TARGETS dbcsr EXPORT dbcsr
+install(TARGETS dbcsr
+  EXPORT DBCSRTargets
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
   ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/dbcsr_api.mod"
   DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-install(EXPORT dbcsr
-  DESTINATION "${CMAKE_INSTALL_LIBDIR}/dbcsr"
-  FILE DBCSRTargets.cmake)
 
 if (WITH_C_API)
-  install(TARGETS dbcsr_c EXPORT dbcsr_c
+  install(TARGETS dbcsr_c
+    EXPORT DBCSRTargets
+    COMPONENT C
     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    )
   install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/dbcsr.h"
-    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-  install(EXPORT dbcsr_c
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}/dbcsr"
-    FILE DBCSRCTargets.cmake)
+    COMPONENT C
+    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    )
 endif()
+
+configure_package_config_file(cmake/DBCSRConfig.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/DBCSRConfig.cmake"
+  INSTALL_DESTINATION "${config_install_dir}"
+  )
+write_basic_package_version_file("${CMAKE_CURRENT_BINARY_DIR}/DBCSRConfigVersion.cmake"
+  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
+  COMPATIBILITY SameMajorVersion
+  )
+install(EXPORT DBCSRTargets
+  NAMESPACE "${config_namespace}"
+  DESTINATION "${config_install_dir}"
+  )
+install(FILES
+  ${CMAKE_CURRENT_BINARY_DIR}/DBCSRConfig.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/DBCSRConfigVersion.cmake
+  DESTINATION ${config_install_dir}
+  )
