cmake: fix integration of libcusmm/CUDA

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -116,15 +116,28 @@ if (BLAS_LIBRARIES MATCHES "mkl_")
   target_compile_definitions(dbcsr PRIVATE __MKL)
 endif ()
 
+# from https://cliutils.gitlab.io/modern-cmake/chapters/packages/CUDA.html
+function(CUDA_CONVERT_FLAGS EXISTING_TARGET)
+    get_property(old_flags TARGET ${EXISTING_TARGET} PROPERTY INTERFACE_COMPILE_OPTIONS)
+    if(NOT "${old_flags}" STREQUAL "")
+        string(REPLACE ";" "," CUDA_flags "${old_flags}")
+        set_property(TARGET ${EXISTING_TARGET} PROPERTY INTERFACE_COMPILE_OPTIONS
+            "$<$<BUILD_INTERFACE:$<COMPILE_LANGUAGE:CXX>>:${old_flags}>$<$<BUILD_INTERFACE:$<COMPILE_LANGUAGE:CUDA>>:-Xcompiler=${CUDA_flags}>"
+            )
+    endif()
+endfunction()
+
 if (USE_CUDA)
   set(CMAKE_CUDA_FLAGS "-arch=sm_${CUDA_ARCH_NUMBER} --cudart static")
-  target_link_libraries(dbcsr PUBLIC ${CUDA_LIBRARY} cuda nvrtc)
+
+  target_link_libraries(dbcsr PRIVATE cuda)
 
   # add libcusmm which has its own CMakeLists.txt due to code generation
   add_subdirectory(acc/libsmm_acc/libcusmm)
-  target_link_libraries(dbcsr PRIVATE $<TARGET_OBJECTS:libcusmm>)
+  target_sources(dbcsr PRIVATE $<TARGET_OBJECTS:libcusmm>)
+  target_link_libraries(dbcsr PRIVATE nvrtc)
 
-  # add the rest of the CUDA sources directly to the lib
+  # add the rest of the CUDA sources directly to the main lib
   target_sources(dbcsr PRIVATE ${DBCSR_CUDA_SRCS})
 
   # tests need some of the libcusmm headers and for CMake <3.12
@@ -133,11 +146,26 @@ if (USE_CUDA)
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/acc/libsmm_acc/libcusmm>
     )
 
+  # workaround for CUDA support with CMake <3.13, see also
+  # see https://gitlab.kitware.com/cmake/cmake/issues/17929
+  # and https://cliutils.gitlab.io/modern-cmake/chapters/packages/CUDA.html
+  if (OpenMP_FOUND)
+    cuda_convert_flags(OpenMP::OpenMP_Fortran)
+  endif ()
+  if (MPI_FOUND)
+    cuda_convert_flags(MPI::MPI_Fortran)
+  endif ()
+
   if (USE_CUBLAS)
     target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC=2)
-    target_link_libraries(dbcsr PUBLIC ${CUBLAS})
+    target_link_libraries(dbcsr PRIVATE ${CUBLAS})
   else ()
     target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC)
+  endif ()
+
+  if (APPLE)
+    # Help the static cuda runtime find the driver (libcuda.dyllib) at runtime.
+    set_property(TARGET dbcsr PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
   endif ()
 endif ()
 
