--- a/src/cmake/DBCSRConfig.cmake.in
+++ b/src/cmake/DBCSRConfig.cmake.in
@@ -2,12 +2,18 @@
 
 include(CMakeFindDependencyMacro)
 
+# the following should only be needed when building statically
+
 if (@USE_MPI@)
   find_dependency(MPI)
 endif ()
 
 if (@USE_OPENMP@)
   find_dependency(OpenMP)
+endif ()
+
+if (@USE_CUDA@)
+  enable_language(CUDA)
 endif ()
 
 include("${CMAKE_CURRENT_LIST_DIR}/DBCSRTargets.cmake")
