update DistBCSR.hpp and added DistBCSR_example_3.cpp

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -21,7 +21,7 @@ all: dbcsr_example_3_cpp.x dbcsr_example_4_cpp.x dbcsr_example_5_cpp.x
 endif
 # Include C++ examples if the DistBCSR.hpp is installed
 ifneq (,$(wildcard $(DBCSRDIR)/include/DistBCSR.hpp))
-all: DistBCSR_example_1_cpp.x DistBCSR_example_2_cpp.x
+all: DistBCSR_example_1_cpp.x DistBCSR_example_2_cpp.x DistBCSR_example_3_cpp.x
 endif
 
 %.x: %.F
