--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,16 @@ addons:
     packages:
     - cmake
 
+cache:
+  pip: true
+  directories:
+    - $HOME/deps
+
 env:
   global:
   # LIBXSMM: update to v1.10 or later
   - LIBXSMM_VERSION=f1171cc08fbe8f65a2aad6d6d9af71ceb975ef91
+  - CMAKE_VERSION=3.10.3
 
 install:
   # Update cmake to the minimal required version (shamelessly copied from the boost travis config):
@@ -25,16 +31,26 @@ install:
   - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]] ; then
-      CMAKE_URL="https://cmake.org/files/v3.10/cmake-3.10.3-Linux-x86_64.tar.gz"
-      mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+      CMAKE_URL="https://cmake.org/files/v${CMAKE_VERSION%.*}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz"
+      CMAKE_DIR="cmake-${CMAKE_VERSION}"
+      if [[ ! -e "${CMAKE_DIR}" ]] ; then
+        rm -rf cmake-*
+        mkdir "${CMAKE_DIR}"
+        travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C "${CMAKE_DIR}"
+      fi
+      export PATH=${DEPS_DIR}/${CMAKE_DIR}/bin:${PATH}
     fi
   - cmake --version
   - |
     LIBXSMM_URL="https://github.com/hfp/libxsmm/archive/${LIBXSMM_VERSION}.tar.gz"
-    mkdir libxsmm && travis_retry wget --no-check-certificate --quiet -O - ${LIBXSMM_URL} | tar --strip-components=1 -xz -C libxsmm
-    make -C libxsmm -j
-    export PKG_CONFIG_PATH=${DEPS_DIR}/libxsmm/lib
+    LIBXSMM_DIR="libxsmm-${LIBXSMM_VERSION}"
+    if [[ ! -e "${LIBXSMM_DIR}" ]] ; then
+      rm -rf libxsmm-*
+      mkdir "${LIBXSMM_DIR}"
+      travis_retry wget --no-check-certificate --quiet -O - ${LIBXSMM_URL} | tar --strip-components=1 -xz -C "${LIBXSMM_DIR}"
+      make -C "${LIBXSMM_DIR}" -j
+    fi
+    export PKG_CONFIG_PATH=${DEPS_DIR}/${LIBXSMM_DIR}/lib
   - pkg-config libxsmm --exists
 
 before_script:
