--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ cache:
 
 env:
   global:
-  # LIBXSMM: update to v1.10 or later
-  - LIBXSMM_VERSION=930952e33bb70dc6167af051af744922aad5a4ad
+  - LIBXSMM_VERSION=1.10
   - CMAKE_VERSION=3.10.3
 
 install:
