--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,9 @@ repos:
   rev: v2.0.0
   hooks:
   - id: flake8
+  - id: check-ast
+    stages: [manual]
+    language_version: "python2"
+  - id: check-ast
+    stages: [manual]
+    language_version: "python3"
