--- a/.travis.yml
+++ b/.travis.yml
@@ -100,6 +100,9 @@ jobs:  # the following jobs inherit only the first OS
     script:
     - set -o pipefail
     - git diff --name-only --diff-filter=AM HEAD...$TRAVIS_BRANCH | xargs pre-commit run --files
+  - name: "Run pre-commit hook 'check-ast' on all files"
+    script:
+    - pre-commit run --hook-stage manual --all-files check-ast
   - stage: release
     name: "Build release tarball and deploy to GitHub"
     if: tag IS present
