--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,8 @@ jobs:
     script:
     - set -o pipefail
     - git diff --name-only --diff-filter=AM HEAD...$TRAVIS_BRANCH | xargs pre-commit run --files
-  - stage: GitHub Release
+  - stage: release
+    name: "Build release tarball and deploy to GitHub"
     if: tag IS present
     script:
       # do an in-source config for simplicity since we are not building anything here
@@ -125,5 +126,3 @@ jobs:
       # the following 2 lines work around an issue in TravisCI with draft=true:
       tag_name: $TRAVIS_TAG
       target_commitish: $TRAVIS_COMMIT
-      on:
-        tags: true
