--- a/Makefile.inc
+++ b/Makefile.inc
@@ -220,3 +220,9 @@ FCFLAGS +=  -DNDEBUG
 endif
 
 #######################################################################################
+#
+# Enable for MacOS compilation (-D__ACCELERATE is for Apple Accelerate library)
+
+#FCFLAGS += -D__NO_STATM_ACCESS -D__ACCELERATE
+
+#######################################################################################
