--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,6 +54,9 @@ set(dbcsr_test_csr_conversions_SRCS dbcsr_test_csr_conversions.F)
 # but we would need cmake 3.12 to be able to specify target_link_libraries on those to get
 # the proper compile flags
 add_library(dbcsr_unittest_common STATIC ${dbcsr_unittest_common_SRCS})
+if (APPLE AND BLAS_LIBRARIES MATCHES "Accelerate")
+  target_compile_definitions(dbcsr_unittest_common PRIVATE __ACCELERATE)
+endif()
 target_link_libraries(dbcsr_unittest_common dbcsr)
 
 foreach (dbcsr_test ${DBCSR_TESTS})
