--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ os:
   - linux
   - osx
 
+dist: xenial
+
 addons:
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
     packages:
     - gfortran
     - libblas-dev
@@ -50,18 +50,6 @@ install:
   # Update cmake to the minimal required version (shamelessly copied from the boost travis config):
   - DEPS_DIR="${HOME}/deps"
   - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]] ; then
-      CMAKE_URL="https://cmake.org/files/v${CMAKE_VERSION%.*}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz"
-      CMAKE_DIR="cmake-${CMAKE_VERSION}"
-      if [[ ! -e "${CMAKE_DIR}" ]] ; then
-        rm -rf cmake-*
-        mkdir "${CMAKE_DIR}"
-        travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C "${CMAKE_DIR}"
-      fi
-      export PATH=${DEPS_DIR}/${CMAKE_DIR}/bin:${PATH}
-    fi
-  - cmake --version
   - |
     LIBXSMM_URL="https://github.com/hfp/libxsmm/archive/${LIBXSMM_VERSION}.tar.gz"
     LIBXSMM_DIR="libxsmm-${LIBXSMM_VERSION}"
