--- a/Makefile.inc
+++ b/Makefile.inc
@@ -209,7 +209,9 @@ WFLAGS      = -Werror=aliasing -Werror=ampersand -Werror=c-binding-type \
 FCFLAGS    += $(WFLAGS)
 
 ifeq ($(CHECKS),1)
+ifneq ($(LEAKS),0)
 FCFLAGS    += -fsanitize=leak
+endif
 FCFLAGS    += -fcheck=bounds,do,recursion,pointer -Wconversion -fbacktrace
 endif
 
