--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,9 +110,23 @@ endif ()
 
 set(ARCHIVE_NAME "${CMAKE_PROJECT_NAME}-${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 add_custom_target(dist
-  COMMAND ${CMAKE_COMMAND} -E echo "Building distribution: ${ARCHIVE_NAME}"
+  COMMENT "Building distribution: ${ARCHIVE_NAME}"
   COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/dist"
   COMMAND git archive-all "${CMAKE_BINARY_DIR}/dist/${ARCHIVE_NAME}.tar.gz"
   COMMAND ${CMAKE_COMMAND} -E echo "SHA512 Digests:"
   COMMAND ${CMAKE_COMMAND} -E sha512sum "${CMAKE_BINARY_DIR}/dist/${ARCHIVE_NAME}.tar.gz"
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+
+find_program(FORD_EXE ford
+  DOC "path to the ford executable (required to generate the documentation)"
+  )
+
+# copy the FORD project-file into the build directory
+configure_file(project-file.md.in project-file.md)
+
+add_custom_target(doc
+  COMMENT "Generating API documentation"
+  COMMAND "${FORD_EXE}" project-file.md
+  VERBATIM
+  )
+add_dependencies(doc fypp)  # only depend on the fypp step to avoid building everything just for the docs
