tests/libcusmm: complete timer and unit test
timer_multiply:
- Command line option: autotuned or predicted
- For 'predicted', sample the 4 <= m, n, k <= 45 space
- Add to build system

unittest_multiply:
- generate unittest at compile time
- Given the much larger number of kernels available, generate the
libcusmm unittest at compile time by testing the autotuned kernels
and a sample from the predicted kernels

--- a/tests/libcusmm_unittest_multiply.template
+++ b/tests/libcusmm_unittest_multiply.template
@@ -29,8 +29,9 @@ int main(int argc, char** argv){
     char * kernel_descr[1] = {buffer};
 
     // Get all blocksizes available in libcusmm
-    std::vector<Triplet> libcusmm_triplets;
-    get_libcusmm_triplets(libcusmm_triplets, ht);
+    std::vector<Triplet> libcusmm_triplets = {
+            [[UNITTEST_KERNELS_HERE]]
+    };
     int n_triplets = libcusmm_triplets.size();
     printf("# Libcusmm has %d blocksizes for multiplication\n", n_triplets);
 
