--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -22,11 +22,21 @@ dbcsr_tensor_unittest: BIN_DEPS =
 ifneq ($(NVCC),)
 UNITTESTS += libcusmm_unittest_multiply libcusmm_unittest_transpose libcusmm_timer_multiply
 
+libcusmm_unittest_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py
+	$(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py --base_folder $(DBCSRHOME) --gpu_version=$(GPUVER)
+
+libcusmm_unittest_multiply: libcusmm_unittest_multiply.cu
+
 SRC_TESTS += libcusmm_unittest_multiply.cu
 libcusmm_unittest_multiply: BIN_DEPS =
 
 SRC_TESTS += libcusmm_unittest_transpose.cu
 libcusmm_unittest_transpose: BIN_DEPS =
+
+libcusmm_timer_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py 
+	$(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py --base_folder $(DBCSRHOME) --gpu_version=$(GPUVER)
+
+libcusmm_timer_multiply: libcusmm_timer_multiply.cu
 
 SRC_TESTS += libcusmm_timer_multiply.cu
 libcusmm_timer_multiply: BIN_DEPS =
