cmake: fix running tests with MPICH
Fixes #119, thanks to antoscha for the suggested fix

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,9 +23,9 @@ file(GLOB DBCSR_PERF_TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
 
 foreach (dbcsr_perf_test ${DBCSR_PERF_TESTS})
   if (USE_MPI)
-    add_test(NAME dbcsr_perf:${dbcsr_perf_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} dbcsr_perf ${MPIEXEC_POSTFLAGS} "${CMAKE_CURRENT_SOURCE_DIR}/${dbcsr_perf_test}")
+    add_test(NAME dbcsr_perf:${dbcsr_perf_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ./dbcsr_perf ${MPIEXEC_POSTFLAGS} "${CMAKE_CURRENT_SOURCE_DIR}/${dbcsr_perf_test}")
   else ()
-    add_test(NAME dbcsr_perf:${dbcsr_perf_test} COMMAND dbcsr_perf "${CMAKE_CURRENT_SOURCE_DIR}/${dbcsr_perf_test}")
+    add_test(NAME dbcsr_perf:${dbcsr_perf_test} COMMAND ./dbcsr_perf "${CMAKE_CURRENT_SOURCE_DIR}/${dbcsr_perf_test}")
   endif ()
   set_tests_properties(dbcsr_perf:${dbcsr_perf_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
 endforeach ()
@@ -64,9 +64,9 @@ foreach (dbcsr_test ${DBCSR_TESTS})
   target_link_libraries(${dbcsr_test} dbcsr_unittest_common)
   # register unittest executable with CMake
   if (USE_MPI)
-    add_test(NAME ${dbcsr_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ${dbcsr_test} ${MPIEXEC_POSTFLAGS})
+    add_test(NAME ${dbcsr_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ./${dbcsr_test} ${MPIEXEC_POSTFLAGS})
   else ()
-    add_test(NAME ${dbcsr_test} COMMAND ${dbcsr_test})
+    add_test(NAME ${dbcsr_test} COMMAND ./${dbcsr_test})
   endif ()
   set_tests_properties(${dbcsr_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
 endforeach ()
@@ -85,9 +85,9 @@ if (USE_CUDA)
     target_link_libraries(${libcusmm_test} dbcsr)
     # register unittest executable with CMake
     if (USE_MPI)
-      add_test(NAME ${libcusmm_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ${libcusmm_test} ${MPIEXEC_POSTFLAGS})
+      add_test(NAME ${libcusmm_test} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${num_ranks} ${MPIEXEC_PREFLAGS} ./${libcusmm_test} ${MPIEXEC_POSTFLAGS})
     else ()
-      add_test(NAME ${libcusmm_test} COMMAND ${libcusmm_test})
+      add_test(NAME ${libcusmm_test} COMMAND ./${libcusmm_test})
     endif ()
     set_tests_properties(${libcusmm_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${num_threads})
   endforeach ()
