ops/dbcsr_vector.F works but crashes at the end of tests/dbcsr_test_mat_vec_mult.F

--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -19,6 +19,9 @@ dbcsr_unittest3: BIN_DEPS = dbcsr_test_multiply.o
 SRC_TESTS += dbcsr_tensor_unittest.F
 dbcsr_tensor_unittest: BIN_DEPS =
 
+SRC_TESTS += dbcsr_test_mat_vec_mult.F
+dbcsr_test_mat_vec_mult: BIN_DEPS =
+
 ifneq ($(NVCC),)
 UNITTESTS += libcusmm_unittest_multiply libcusmm_unittest_transpose libcusmm_timer_multiply
 
