--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -1,5 +1,5 @@
 # Add unit tests to be executed by test target in Makefile
-UNITTESTS = dbcsr_unittest1 dbcsr_unittest2 dbcsr_tensor_unittest dbcsr_test_csr_conversions
+UNITTESTS = dbcsr_unittest1 dbcsr_unittest2 dbcsr_unittest3 dbcsr_tensor_unittest dbcsr_test_csr_conversions
 
 # Input tests for the dbcsr_performance_driver
 PERFTESTS = $(wildcard $(TESTSDIR)/inputs/*.perf)
@@ -10,19 +10,11 @@ dbcsr_performance_driver: BIN_DEPS = dbcsr_performance_multiply.o
 SRC_TESTS += dbcsr_test_csr_conversions.F
 dbcsr_test_csr_conversions: BIN_DEPS =
 
-SRC_TESTS += dbcsr_unittest1.F dbcsr_unittest2.F
+SRC_TESTS += dbcsr_unittest1.F dbcsr_unittest2.F dbcsr_unittest3
 dbcsr_unittest1: BIN_DEPS = dbcsr_test_add.o dbcsr_test_multiply.o
 dbcsr_unittest2: BIN_DEPS = dbcsr_test_multiply.o
-
-ifneq ($(NVCC),)
-UNITTESTS += dbcsr_unittest3
-
-SRC_TESTS += dbcsr_unittest3.F
 dbcsr_unittest3: BIN_DEPS = dbcsr_test_multiply.o
 .NOTPARALLEL: dbcsr_unittest1 dbcsr_unittest2 dbcsr_unittest3 # Dependency because both tests share an object file
-else
-.NOTPARALLEL: dbcsr_unittest1 dbcsr_unittest2 # Dependency because both tests share an object file
-endif
 
 SRC_TESTS += dbcsr_tensor_unittest.F
 dbcsr_tensor_unittest: BIN_DEPS =
