--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -1,6 +1,6 @@
-# Add unit tests to be executed by test target in Makefile
-UNITTESTS = dbcsr_unittest1 dbcsr_unittest2 dbcsr_unittest3 dbcsr_tensor_unittest dbcsr_test_csr_conversions
 
+# Add unit tests to be executed by test target in Makefile
+UNITTESTS = dbcsr_unittest1 dbcsr_unittest2 dbcsr_tensor_unittest dbcsr_test_csr_conversions,dbcsr_test_mat_vec_mult
 # Input tests for the dbcsr_performance_driver
 PERFTESTS = $(wildcard $(TESTSDIR)/inputs/*.perf)
 
@@ -10,17 +10,16 @@ dbcsr_performance_driver: BIN_DEPS = dbcsr_performance_multiply.o
 SRC_TESTS += dbcsr_test_csr_conversions.F
 dbcsr_test_csr_conversions: BIN_DEPS =
 
-SRC_TESTS += dbcsr_unittest1.F dbcsr_unittest2.F dbcsr_unittest3
+SRC_TESTS += dbcsr_unittest1.F dbcsr_unittest2.F
 dbcsr_unittest1: BIN_DEPS = dbcsr_test_add.o dbcsr_test_multiply.o
 dbcsr_unittest2: BIN_DEPS = dbcsr_test_multiply.o
-dbcsr_unittest3: BIN_DEPS = dbcsr_test_multiply.o
-.NOTPARALLEL: dbcsr_unittest1 dbcsr_unittest2 dbcsr_unittest3 # Dependency because both tests share an object file
+.NOTPARALLEL: dbcsr_unittest1 dbcsr_unittest2 # Dependency because both tests share an object file
 
 SRC_TESTS += dbcsr_tensor_unittest.F
 dbcsr_tensor_unittest: BIN_DEPS =
 
 SRC_TESTS += dbcsr_test_mat_vec_mult.F
-dbcsr_test_mat_vec_mult: BIN_DEPS =
+dbcsr_test_mat_vec_mult: BIN_DEPS = dbcsr_test_multiply.o
 
 ifneq ($(NVCC),)
 UNITTESTS += libcusmm_unittest_multiply libcusmm_unittest_transpose libcusmm_timer_multiply
